fixed library, expanded the getting of article name to deal with null/empty